kubectl_deploy/django/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: django
  namespace: ${K8S_NAMESPACE}
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-ref-app
  template:
    metadata:
      labels:
        app: django-ref-app
    spec:
      containers:
        - name: django
          image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/cloud-platform-demo-app:latest
          ports:
            - containerPort: 8000
