kubectl_deploy/django/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: django-ingress
  namespace: ${K8S_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
spec:
  rules:
  - host: ${K8S_NAMESPACE}.apps.${K8S_CLUSTER_NAME}
    http:
      paths:
      - backend:
          serviceName: django-service
          servicePort: 8000
        path: /
  tls:
  - hosts:
    - ${K8S_NAMESPACE}.apps.${K8S_CLUSTER_NAME}
    secretName: demo-cert
